<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:backgroundTint="@color/colorAccent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="169dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorAccent"
        android:text="EXAMEN DE ADMISION"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:text="@string/id_nombre_apellido"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/baseline_drive_file_rename_outline_24"
        android:ems="10"
        android:hint="Tu respuesta"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/id_correo"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/baseline_alternate_email_24"
        android:ems="10"
        android:hint="Tu respuesta"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/id_clave"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/baseline_password_24"
        android:ems="10"
        android:hint="Tu respuesta"
        android:inputType="textPassword"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/id_fecha"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/baseline_date_range_24"
        android:ems="10"
        android:hint="dd/mm/aa"
        android:inputType="date"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="79dp"
        android:layout_height="21dp"
        android:layout_marginTop="12dp"
        android:text="@string/id_carrera"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="366dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:drawableRight="@drawable/baseline_computer_24"
            android:text="Ingenieria de Sistemas"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:drawableRight="@drawable/baseline_public_24"
            android:text="Ingenieria Ambienta"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:drawableRight="@drawable/baseline_engineering_24"
            android:text="Ingenieria Mecanica"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:drawableRight="@drawable/baseline_admin_panel_settings_24"
            android:text="Administración"
            android:textSize="10sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="314dp"
        android:layout_height="27dp"
        android:text="Por qué medio se entero de la convocatoria?"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:drawableRight="@drawable/baseline_radio_24"
            android:text="Radio"
            android:textSize="10sp" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:drawableRight="@drawable/baseline_computer_24"
            android:text="Internet"
            android:textSize="10sp" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:drawableRight="@drawable/baseline_face_retouching_natural_24"
            android:text="Amigo"
            android:textSize="10sp" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:drawableRight="@drawable/baseline_public_24"
            android:text="Publicidad"
            android:textSize="10sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/boton_enviar"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorAccent"
        app:icon="@drawable/baseline_send_24"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:strokeColor="@color/colorAccent" />

</androidx.constraintlayout.widget.ConstraintLayout>